--- a/itfuture/accounts/templates/accounts/home.html
+++ b/itfuture/accounts/templates/accounts/home.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         .header {
-            background-color: #007BFF;
+            background-color: #00ff37f2;
             color: white;
             text-align: center;
             padding: 20px;
